--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
   <div class="card">
     <img id="avatar" src="" alt="Avatar Discord">
-    <h1>Pseudo Discord</h1>
+    <h1>Kyliky</h1>
     <p>ID Discord : 1010512967269367889</p>
   </div>
 
